feat: Phase 2 hybrid multi-tenant architecture
- Add SiteMember entity for N:M User-Site relationship
- Implement RBAC middleware (requireSiteAccess, requireSiteRole, requirePermission)
- Create migration system with hybrid approach (preserves userId for compatibility)
- Add system_role field to User entity for SuperAdmin access
- Maintain backward compatibility with existing controllers
- Disable synchronize mode, use migrations for schema management

BREAKING: None (Hybrid approach maintains all existing functionality)
NEW: Multi-tenant infrastructure ready for Phase 3

Changes:
- src/models/User.ts: Added system_role, dual relationships (sites + siteMembers)
- src/models/Site.ts: Added dual relationships (user + members), restored all fields
- src/models/SiteMember.ts: NEW junction table with role-based permissions
- src/migrations/1707724800000-AddMultiTenancy.ts: NEW hybrid migration
- src/middleware/site-access.middleware.ts: NEW RBAC middleware
- src/config/database.ts: Disabled synchronize, added SiteMember entity
- src/services/seed.service.ts: Set superadmin role for admin account
- package.json: Added TypeORM migration scripts

--- a/public/live-dashboard.html
+++ b/public/live-dashboard.html
@@ -371,7 +371,7 @@
                         <div class="site-item">
                             <div class="site-info">
                                 <h3>${site.site_name}</h3>
-                                <div class="site-url">${site.target_url}</div>
+                                <a href="${site.target_url}" target="_blank" class="site-url" style="display: block; text-decoration: none; color: var(--primary); margin-bottom: 0.5rem;">${site.target_url} 🔗</a>
                                 ${site.db_host ? `
                                     <div style="font-size: 0.75rem; color: #64748B; margin-top: 0.5rem; display: flex; gap: 1rem;">
                                         <span>🗄️ DB: ${site.db_host}</span>
