--- a/public/live-dashboard.html
+++ b/public/live-dashboard.html
@@ -261,7 +261,7 @@
         </header>
 
         <div class="api-info">
-            <strong>🔗 API 엔드포인트:</strong> http://localhost:3000<br>
+            <strong>🔗 API 엔드포인트:</strong> <br>
             <strong>📊 데이터 갱신:</strong> 5초마다 자동 새로고침 |
             <a href="monitoring-logs.html" style="color: var(--primary); font-weight: 600; text-decoration: none;">📝
                 실시간 모니터링 로그 보기</a>
@@ -312,7 +312,7 @@
     </main>
 
     <script>
-        const API_BASE = 'http://localhost:3000';
+        const API_BASE = '';
         let isConnected = false;
 
         // API 연결 상태 체크
