--- a/public/login.html
+++ b/public/login.html
@@ -188,7 +188,7 @@
                 : { email, password, name };
 
             try {
-                const response = await fetch(`http://localhost:3000${endpoint}`, {
+                const response = await fetch(`${endpoint}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(body)
