--- a/public/monitoring-logs.html
+++ b/public/monitoring-logs.html
@@ -221,7 +221,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:3000';
+        const API_BASE = '';
         let autoRefreshInterval = null;
 
         async function checkAPI() {
